--- a/AppProyecto/templates/AppProyecto/crearFormBlog.html
+++ b/AppProyecto/templates/AppProyecto/crearFormBlog.html
@@ -10,7 +10,7 @@
 {% block contenido_que_cambia %}
 <h1 class="mb-5">Crear nuevo BLOG</h1>
 
-<form action="{% url 'crearFormBlog' %}" method="POST"> {% csrf_token %}
+<form action="{% url 'crearFormBlog' %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
 
 
     <table>
