--- a/AppProyecto/templates/AppProyecto/editarSuscriptor.html
+++ b/AppProyecto/templates/AppProyecto/editarSuscriptor.html
@@ -8,7 +8,7 @@
 
 
 {% block contenido_que_cambia %}
-<h1 class="mb-5">Editando/h1>
+<h1 class="mb-5">Editando</h1>
 
 <form action="{% url 'editarSuscriptor' suscriptor.id  %}" method="POST"> {% csrf_token %}
 
