--- a/AppProyecto/templates/AppProyecto/leerBlog.html
+++ b/AppProyecto/templates/AppProyecto/leerBlog.html
@@ -14,7 +14,7 @@
 
 <ul>
     {% for blog in blogs %}
-       <h4>{{blog.titulo}} - {{blog.num_blog}} </h4>
+       <h4>{{blog.titulo}} - {{blog.subtitulo}} - {{blog.num_blog}} </h4>
        <a class="btn btn-danger" href="{% url 'eliminarBlog' blog.id %}">Eliminar blog</a>
        <a class="btn btn-success" href="{% url 'editarBlog' blog.id %}">Editar blog</a>
        <br>
