--- a/AppProyecto/templates/AppProyecto/editarPerfil.html
+++ b/AppProyecto/templates/AppProyecto/editarPerfil.html
@@ -8,22 +8,22 @@
 
 
 {% block contenido_que_cambia %}
-<h1 class="mb-5">Editando perfil</h1>
+<h2 class="mb-5">Editando perfil</h2>
 
-<form action="{% url 'editarPerfil' %}" method="POST"> {% csrf_token %}
+<form action="{% url 'editarPerfil' %}" method="POST" entype="multipart/form-data">{% csrf_token %}
 
 
     <table>
         {{ formulario.as_table }}
     </table>
 
-
-
     <input type="submit" value="Guardar">
 
 </form>
 
-
-
 <h3>{{ mensaje }}</h3>
+
+
+
+<a class="btn btn-success" href="{% url 'inicio' %}">Volver</a>
 {% endblock %}
