--- a/AppProyecto/templates/AppProyecto/padre.html
+++ b/AppProyecto/templates/AppProyecto/padre.html
@@ -25,13 +25,22 @@
                 <a class="btn btn-primary" href="{% url 'autorFormulario' %}">Autores</a>
                 <a class="btn btn-primary" href="{% url 'suscriptorFormulario' %}">Suscripciones</a>
                 {% if user.is_authenticated %}
-                <h5> Hola {{ user.username }}</h5>
+                <h5> {{ user.username }}</h5>
                 <img src="{{ avatar }}" alt="">
 
+                <a class="btn btn-primary" href="{% url 'editarPerfil' %}">Editar Perfil</a>
+
                 <a class="btn btn-primary" href="{% url 'logout' %}">Deslogueate</a> 
+                <a class="btn btn-success" href="{% url 'agregarAvatar' %}">Agregar Avatar</a>
+
                 {% else%}
                 <a class="btn btn-primary" href="{% url 'login' %}">Logueate</a>
+
                 <a class="btn btn-primary" href="{% url 'register' %}">Registrate</a>
+                
+
+
+                
                 {% endif%}
             </div>
         </nav>
